--- a/_sass/variables-dark.scss
+++ b/_sass/variables-dark.scss
@@ -17,7 +17,7 @@ $link-hover-color-dark: shade-color($link-color-dark, 20%);
 $aside-fg-dark: #000000aa;
 
 $nav-bg-dark: #000000aa;
-$nav-inner-bg-dark: $black;
+$nav-inner-bg-dark: #222222;
 $nav-fg-dark: $white;
 $nav-fg-md-dark: $nav-fg-md;
 
